--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 # files
 changeLogFile=classpath:db/changelog/db.changelog-master.yaml
-outputChangeLogFile=src/main/resources/db/changelog/changes/db.changelog-1.yaml
+#outputChangeLogFile=src/main/resources/db/changelog/changes/db.changelog-1.yaml
 
 # DB connection properties
 url=jdbc:h2:file:~/vaadin-petstore
