--- a/src/main/resources/db/changelog/changes/20210904-010404.yaml
+++ b/src/main/resources/db/changelog/changes/20210904-010404.yaml
@@ -1,14 +1,14 @@
 databaseChangeLog:
 - logicalFilePath: 20210904-010404.yaml
 - changeSet:
-      id: load data user+preferences
+      id: load data app_user+preferences
       author: petstore
       changes:
         - loadData:
-            file: db/changelog/data/20210904-010404-user.tsv
+            file: db/changelog/data/20210904-010404-app_user.tsv
             separator: '	'
             quotchar: '"'
-            tableName: USER
+            tableName: APP_USER
         - loadData:
             file: db/changelog/data/20210904-010404-preferences.tsv
             separator: '	'
