--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 //file:noinspection GroovyAssignabilityCheck
 
 plugins {
-    id "org.springframework.boot" version "2.5.1"
+    id "org.springframework.boot" version "2.7.4"
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "com.vaadin" version "20.0.7"
     id "java"
@@ -15,11 +15,24 @@ ext {
 
 repositories {
     mavenCentral()
+    maven {
+        name = "ossrhSnapshot"
+        url = "https://oss.sonatype.org/content/repositories/snapshots/"
+        credentials {
+            username = ossrhUsername
+            password = ossrhPassword
+        }
+    }
 }
+
 
 dependencyManagement {
     imports {
         mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
+    }
+
+    resolutionStrategy {
+        cacheChangingModulesFor 0, 'seconds'
     }
 }
 
@@ -39,14 +52,19 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-jdbc"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-starter-tomcat"
-    implementation "org.projectlombok:lombok:1.18.20"
-    implementation "org.hibernate.validator:hibernate-validator:6.2.0.Final"
-    implementation "org.liquibase:liquibase-core:4.4.3"
-    implementation "org.yaml:snakeyaml:1.27"
-    implementation "com.h2database:h2:1.4.200"
-    implementation "org.postgresql:postgresql:42.2.20"
-    annotationProcessor "org.projectlombok:lombok:1.18.20"
+    implementation "org.projectlombok:lombok:1.18.24"
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+    implementation 'org.liquibase:liquibase-core:4.17.0'
+    implementation 'org.yaml:snakeyaml:1.33'
+    implementation 'com.h2database:h2:2.1.214'
+    implementation 'org.postgresql:postgresql:42.5.0'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
     runtimeOnly "org.springframework.boot:spring-boot-devtools"
+
+    //implementation 'com.net128.oss.web.lib:web-modules-jpa-csv:0.0.1-SNAPSHOT'
+    implementation 'com.net128.oss.web.lib:web-modules-jpa-csv:0.2.0'
+    implementation 'com.net128.oss.web.lib:web-modules-iframe-navigator:0.2.0'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.13.4'
 }
 
 group = "com.net128.application.vaadin"
