--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ repositories {
         name = "ossrhSnapshot"
         url = "https://oss.sonatype.org/content/repositories/snapshots/"
         credentials {
-            username = ossrhUsername
-            password = ossrhPassword
+            username = project.ext.properties.ossrhUsername
+            password = project.ext.properties.ossrhPassword
         }
         //snapshotsOnly()
     }
