--- a/build.gradle
+++ b/build.gradle
@@ -180,8 +180,8 @@ publishing {
             def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials {
-                username = ossrhUsername
-                password = ossrhPassword
+                username = project.ext.properties.ossrhUsername
+                password = project.ext.properties.ossrhPassword
             }
         }
     }
